"wtf-8"/"wtf-16"/"tcl-8" encodings are now withdrawn, moved to the "Rejected alternatives" section.

--- a/tip/597.md
+++ b/tip/597.md
@@ -1,4 +1,4 @@
-# TIP 597: "string is unicode" and new wtf-8/wtf-16/cesu-8 encodings
+# TIP 597: "string is unicode" and better utf-8/utf-16/cesu-8 encodings
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -20,8 +20,7 @@ internally, but modify the "utf-8"/"utf-16" encoders such that any surrogate
 or noncharacter (as defined by the Unicode standard) is replaced
 by the replacement character U+FFFD.
 
-Further on, there are new "wtf-8"/"wtf-16"/"cesu-8" and "tcl-8"
-encodings.
+Further on, there is a new "cesu-8" encoding.
 
 Finally "string bytelength" will be deprecated in Tcl 8.7 and
 fully removed in Tcl 9.0. The new encodings can be used to
@@ -91,22 +90,10 @@ external utf-8/utf16 to internal utf-8, nothing changes: The new
 utf-8/utf-16 decoders are forgiving for surrogates and noncharacters,
 they can continue to be processed by Tcl as-is.
 
-Introduce new "wtf-8"/"wtf-16" encodings. See [WTF-8](https://simonsapin.github.io/wtf-8/).
-The "wtf-8" encoding is almost the same as "utf-8", only it does not
-forbid the codepoints U+D800-U+DFFF. It only forbids sequences in which
-an upper surrogate is immediately followed by a lower surrogate as two 3-byte
-sequences: such sequence are encoded as a single 4-byte sequence.
-
-Introduce a new "cesu-8" encoding. It's the same as "wtf-8", only
+Introduce a new "cesu-8" encoding. It's the same as "utf-8", only
 characters > U+FFFF will be output as a 6-byte sequence in stead of
-a 4-byte sequence. See: [CESU-8](https://en.wikipedia.org/wiki/CESU-8)
-
-Finally introduce a new "tcl-8" encoding. This encoding handles the
-Tcl internal byte format. It's the same as "wtf-8", only the NULL
-byte is encoded as \\xC0 \\x80 in stead of \\x00. The "tcl-8"
-encoding can also be used as a replacement for the "identity" encoding.
-Contrary to "identity" it will correct (or detect, in case of
-TCL_ENCODING_STOPONERROR) invalid byte sequences.
+a 4-byte sequence, and the surrogate/noncharacter codepoints
+are considered conformat. See: [CESU-8](https://en.wikipedia.org/wiki/CESU-8)
 
 The new encoders all implement the flag TCL_ENCODING_STOPONERROR
 (which is not accessible at script level). When this flag is set,
@@ -115,11 +102,8 @@ surrogate or noncharacter or some other problem (e.g. overlong
 byte sequences or missing continuation bytes)
 
 Finally, deprecate the "string bytelength" command. It can be
-replaced by "string length [encoding convertto wtf-8]" or
-"string length [encoding convertto tcl-8]": which one to
-choose depends on whether you want to count the NULL byte
-as 1 ("wtf-8") or as 2 ("tcl-8"). In Tcl 9, the
-"string bytelength" command will be removed.
+replaced by "string length [encoding convertto utf-8]. In
+Tcl 9, the "string bytelength" command will be removed.
 
 # Further enhancements
 
@@ -131,6 +115,13 @@ noncharacter, in stead of producing \\xEF \\xBF \\xBD (as proposed in this TIP).
 Since this change brings more complications, it is left out of
 scope for this TIP. But it would (IMHO) be a very useful addition.
 
+# Rejected alternatives
+
+The "wtf-8"/"wtf-16" and "tcl-8" encodings, proposed earlier, are
+considered inappropriate. Exposing them would expose too much internal
+Tcl implementation at script level, which then cannot be changed any more
+in future Tcl versions. They potentially harm more than they benefit.
+
 # Implementation
 
 Implementation is in Tcl branch tip-597
@@ -141,9 +132,9 @@ Since Tcl 8.6's "utf-8"/"utf-16" encoders can produce non-conformant utf-8/utf-1
 and the new "utf-8"/"utf-16" encoders cannot any more, this introduces a
 **potential incompatibility** for applications which - illegally -
 export non-conformant utf-8/utf-16. Applications which - willingly - want to
-violate the Unicode standard need to start using the "wtf-8"/"wtf-16"/"tcl-8"
-encoders in stead. The "utf-8"/"utf-16" decoders are unchanged, so
-Tcl can continue to receive non-conformant utf-8/utf-16 from other applications.
+violate the Unicode standard can now use the "cesu-8"
+encoder in stead. The "utf-8"/"utf-16" decoders are unchanged, so
+Tcl can continue to handle non-conformant utf-8/utf-16 from other applications.
 
 # Copyright
 
