Mention "ucs-2" as possibility too

--- a/tip/597.md
+++ b/tip/597.md
@@ -132,8 +132,8 @@ Since Tcl 8.6's "utf-8"/"utf-16" encoders can produce non-conformant utf-8/utf-1
 and the new "utf-8"/"utf-16" encoders cannot any more, this introduces a
 **potential incompatibility** for applications which - illegally -
 export non-conformant utf-8/utf-16. Applications which - willingly - want to
-violate the Unicode standard can now use the "cesu-8"
-encoder in stead. The "utf-8"/"utf-16" decoders are unchanged, so
+violate the Unicode standard can now use the "cesu-8" or "ucs-2"
+encoders in stead. The "utf-8"/"utf-16" decoders are unchanged, so
 Tcl can continue to handle non-conformant utf-8/utf-16 from other applications.
 
 # Copyright
