TIP's #531 and 596 in voting

--- a/tip/531.md
+++ b/tip/531.md
@@ -2,7 +2,7 @@
 	Author:         Shannon Noe <shannon.noe@flightaware.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        14-Dec-2018
 	Post-History:  
 	Keywords:       Tcl, stubs
