Fix TIP #601 title. Add "known bugs" section to TIP #466.

--- a/tip/466.md
+++ b/tip/466.md
@@ -462,6 +462,11 @@ revised implementation is better optimizing, so some trace results of display
 line computation are different. Other adjustments were required because of bug
 fixes.
 
+# Known bugs
+
+See [[a34b49f8c6]](https://core.tcl-lang.org/tk/tktview?name=a34b49f8c6) and
+[[6a78781cc3]](https://core.tcl-lang.org/tk/tktview?name=6a78781cc3).
+
 # Open Questions
 
  * tkTextUndo.c implements a specialized undo/redo, not using the legacy
