Another title fix

--- a/tip/601.md
+++ b/tip/601.md
@@ -1,4 +1,4 @@
-# TIP 601: "encoding convertfrom/convertfrom" option to stop on error
+# TIP 601: "encoding convertto/convertfrom" option to stop on error
 	Author:         Harald Oehlmann <harald.oehlmann@elmicron.de>
 	State:          Draft
 	Type:           Project
@@ -8,7 +8,7 @@
 -----
 # Abstract
 
-An additional option is proposed for `encoding convertfrom` to stop on the first encoding issue.
+An additional option is proposed for `encoding convertto/convertfrom` to stop on the first encoding issue.
 
 # Rationale
 
