More known bugs for TIP #466 (revised text widget).

--- a/tip/466.md
+++ b/tip/466.md
@@ -371,6 +371,46 @@ known:
 Detailed memory comparison between legacy code and revised code can be found
 at <http://scidb.sourceforge.net/tk/comparison.html>
 
+## Miscellaneous
+
+ * No function signature pertaining to a public interface was changed. Also
+   public data structures haven't been touched.
+
+ * All recent new features brought in trunk in the legacy version have their
+   counterpart in the revised version, have been improved in performance and
+   have no known drawbacks. Minor incompatibilities are however identified
+   here and there.
+
+# Target Release
+
+Given the amount of changes, also because of our usual precautions regarding
+backwards compatibility, and despite the very high quality of the code and the
+fact it passes \(almost all\) the previously existing test suite, it is deemed
+reasonable to target Tcl/Tk 8.7 \(or 9.0\), but neither the 8.6 nor the 8.5
+streams of releases, which will continue to implement the legacy text widget
+code.
+
+Support of versions back to 8.5 is currently included in the revised code, but
+will be removed \(because it's useless for use in trunk only\) at the time the
+new code will get merged into trunk.
+
+# Implementation
+
+Implementation of the revised text widget code has been placed in branch
+<https://core.tcl-lang.org/tk/timeline?r=revised_text>  of the fossil repository.
+
+This implementation compiles on Linux, Windows, and OS X. It respects the
+standards of Tk \(C99 standard, and also the Tcl source code formatting
+described in [[247]](247.md)\).
+
+The man page for the text widget has been contributed by jima and is included
+in the revised\_text branch.
+
+The expected results of many tests were adjusted to take into account that the
+revised implementation is better optimizing, so some trace results of display
+line computation are different. Other adjustments were required because of bug
+fixes.
+
 ## Known Issues in the Revised Implementation
 
 Based on the author's website, currently only these issues are known: 
@@ -421,51 +461,13 @@ Also, the following should be noted:
 
  * The OS X case should be more tested on a real Mac, because it's the only
    platform using context drawing.
+ 
+## Known bugs
 
-## Miscellaneous
-
- * No function signature pertaining to a public interface was changed. Also
-   public data structures haven't been touched.
-
- * All recent new features brought in trunk in the legacy version have their
-   counterpart in the revised version, have been improved in performance and
-   have no known drawbacks. Minor incompatibilities are however identified
-   here and there.
-
-# Target Release
-
-Given the amount of changes, also because of our usual precautions regarding
-backwards compatibility, and despite the very high quality of the code and the
-fact it passes \(almost all\) the previously existing test suite, it is deemed
-reasonable to target Tcl/Tk 8.7 \(or 9.0\), but neither the 8.6 nor the 8.5
-streams of releases, which will continue to implement the legacy text widget
-code.
-
-Support of versions back to 8.5 is currently included in the revised code, but
-will be removed \(because it's useless for use in trunk only\) at the time the
-new code will get merged into trunk.
-
-# Implementation
-
-Implementation of the revised text widget code has been placed in branch
-<https://core.tcl-lang.org/tk/timeline?r=revised_text>  of the fossil repository.
-
-This implementation compiles on Linux, Windows, and OS X. It respects the
-standards of Tk \(C99 standard, and also the Tcl source code formatting
-described in [[247]](247.md)\).
-
-The man page for the text widget has been contributed by jima and is included
-in the revised\_text branch.
-
-The expected results of many tests were adjusted to take into account that the
-revised implementation is better optimizing, so some trace results of display
-line computation are different. Other adjustments were required because of bug
-fixes.
-
-# Known bugs
-
-See [[a34b49f8c6]](https://core.tcl-lang.org/tk/tktview?name=a34b49f8c6) and
-[[6a78781cc3]](https://core.tcl-lang.org/tk/tktview?name=6a78781cc3).
+Two bugs, namely [[a34b49f8c6]](https://core.tcl-lang.org/tk/tktview?name=a34b49f8c6)
+and [[6a78781cc3]](https://core.tcl-lang.org/tk/tktview?name=6a78781cc3), make
+the corresponding testcases fail but these are not the only known bugs. The complete
+list of known bugs can be requested from the Tk bug tracker: <https://core.tcl-lang.org/tk/rptview?rn=27>
 
 # Open Questions
 
