TIP #531/596/597 votes done

--- a/tip/531.md
+++ b/tip/531.md
@@ -1,13 +1,17 @@
 # TIP 531: Static Tcl Interpreter Creation Function
 	Author:         Shannon Noe <shannon.noe@flightaware.com>
-	State:          Draft
+	State:          Rejected
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        14-Dec-2018
 	Post-History:  
 	Keywords:       Tcl, stubs
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-531
+	Vote-Summary:	Rejected 0/4/1
+	Votes-For:	none
+	Votes-Against:	JN, KBK, KW, MC
+	Votes-Present:	BG
 ----
 
 # Abstract
