--- a/tip/596.md
+++ b/tip/596.md
@@ -2,9 +2,13 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Tcl-Version:    9.0
 	Tcl-Branch:     rfe-854941
+	Vote-Summary:	Accepted 5/0/0
+	Votes-For:	BG, JN, KBK, KW, MC
+	Votes-Against:	none
+	Votes-Present:	none
 -----
 # Abstract
 
