--- a/tip/597.md
+++ b/tip/597.md
@@ -2,9 +2,13 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-597
+	Vote-Summary:	Accepted 3/0/0
+	Votes-For:	DGP, JN, MC
+	Votes-Against:	none
+	Votes-Present:	none
 -----
 # Abstract
 
@@ -93,7 +97,7 @@ they can continue to be processed by Tcl as-is.
 Introduce a new "cesu-8" encoding. It's the same as "utf-8", only
 characters > U+FFFF will be output as a 6-byte sequence in stead of
 a 4-byte sequence, and the surrogate/noncharacter codepoints
-are considered conformat. See: [CESU-8](https://en.wikipedia.org/wiki/CESU-8)
+are considered conformant. See: [CESU-8](https://en.wikipedia.org/wiki/CESU-8)
 
 The new encoders all implement the flag TCL_ENCODING_STOPONERROR
 (which is not accessible at script level). When this flag is set,
