TIP601: small edits, work in progress

--- a/tip/601.md
+++ b/tip/601.md
@@ -16,7 +16,7 @@ The command `encoding convertfrom/convertto` currently does not raise any error 
 Instead the following actions are observed:
 
    *   A replacement character `?` is used.
-   *   An incomplete multi-byte sequence is added verbatim
+   *   An incomplete multi-byte sequence is added verbatim.
 
 ## Example 1: not encodable character
 
@@ -24,18 +24,27 @@ The Polish character "L with bar" is not contained in ISO-latin 1:
 
     % set s \u0141
     Ł
-    % encoding convertfrom iso8859-1 [encoding convertto iso8859-1 $s]
+    % encoding convertto iso8859-1 $s
     ?
 
-In the ISO-Latin 1 conversion, it is replaced by a question mark by the `encoding convertto`command.
+In the ISO-Latin 1 conversion, it is replaced by a question mark by the `encoding convertto` command.
 
 ## Example 2: Incomplete sequence returns remaining value verbatim
 
-The following utf-8 sequence has only a one character final byte.
-The final byte is added as verbatim.
+The following utf-8 sequence has an incomplete final sequence.
+The second byte of the two byte sequence of the last character is missing.
+The incomplete sequence is interpreted as ISO8859-1 and added to the string.
 
-     % encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]
+     % set s [encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]]
      ÄÃ
+     % scan $s %c%c
+     196 195
+
+The first character value 196 is the correct "Ä" character.
+The second character is the verbatim byte of the incomplete utf-8 sequence:
+
+     % scan [encoding convertto utf-8 Ö] %c%c
+     195 150
 
 ## Use case 1: decode continuous multi-byte data
 
@@ -64,13 +73,17 @@ Remark "\0x84" was replaced for the control character "IND" for visibility in th
 With this info, the `-errorcode` may be catched by a `try` clause and the error byte location (2) may be catched.
 The data before may by passed again to `encoding convertfrom` which is the correct received data.
 
+Note: it would be efficient, if the already converted string may be returned also.
+Then, the data must not be passed again to `encoding convertfrom`.
+The current implementation does not fullfill this optimisation.
+
 ## Use case 2:
 
 This use case is given in the following TCL ticket:
 [Ticket 535705](https://core.tcl-lang.org/tcl/info/535705ffffffffff) :
 
 Wrong characters are included in a data base by character replacement when a character not in the current system encoding.
-This causes issues in a multi-platform application.
+This causes issues in a multi-platform applications, as the error is not detected.
 
 # Specification
 
