TIP601 encoding stoponerror: specification and discussion

--- a/tip/601.md
+++ b/tip/601.md
@@ -87,6 +87,65 @@ This causes issues in a multi-platform applications, as the error is not detecte
 
 # Specification
 
+## New Option
+The `encoding` ensamble will be extended by a new option `-stoponerror`:
+
+    encoding convertfrom ?-stoponerror bool? ?encoding? data
+    encoding convertto ?-stoponerror bool? ?encoding? data
+
+The specified boolean has the following functionality:
+
+| Value   | Description |
+|:-------:|:----------------:|
+| `FALSE` | Any conversion data error is handled by replacement by **?** of the concerned byte |
+| `TRUE`  | The conversion stops with an error on any conversion data error |
+
+The default value is `FALSE` for TCL 8.x and `TRUE` for TCL 9.x.
+
+## Error reporting
+
+If `-stoponerror` is `TRUE`, the following error reporting takes place in case of an conversion error.
+
+### Definition of "error position"
+The position of the error in the source string is indicated in the error reporting.
+In case of multi-byte source data, this position is always one byte after the last correct multi-byte sequence.
+
+###Error Message
+
+The error message is: "conversion error at index *error position*"
+
+where *error position* is a number containing the source string error position as defined above.
+
+### Error Code
+
+The error code is composed of the following 4 list elements:
+
+1.  Fix word: `TCL`
+2.  Fix word: `ENCODING`
+3.  Fix word: `STOPONERROR`
+4.  Value *error position*: The index in the source string of the error position.
+
+# Discussion
+
+## Option design
+
+The requirement to use a boolean instead a flag is due to the fact, that it was proposed to change the default value from `FALSE` to `TRUE` with **TCL9**.
+Otherwise, it is not possible to write code for **TCL8** and **TCL9**.
+The boolean is not required if this default change is not seen as a possibility (it may be a vote option).
+
+## Error reporting design
+
+The list of categories for the error code return is given in the [tclvars manual page](http://www.tcl-lang.org/man/tcl8.7/TclCmd/tclvars.htm#M12).
+The **TCL** category matches best.
+
+This design allows to catch this error and get the error position by the following `try` pattern:
+
+    try {
+        set res [encoding convertto iso8859-1 $input]
+    } trap {TCL ENCODING STOPONERROR} {errorMessage errorDict} {
+        set errorIndex [lindex [dict get $errorDict -errorcode] 3]
+        ...
+    }
 
 # Implementation
 
