--- a/tip/601.md
+++ b/tip/601.md
@@ -57,16 +57,16 @@ It would be great to know, where the error is to stop the sequence.
 
 Here is a code snipped with the current implementation:
 
-    % catch {encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1] -stoponerror} e d
+    % catch {encoding convertfrom utf-8 -stoponerror 1 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]} e d
     1
     % set d
         -code 1\
         -level 0
-        -errorstack {INNER {invokeStk1 ::tcl::encoding::convertfrom utf-8 Ã\x84Ã -stoponerror}}
+        -errorstack {INNER {invokeStk1 ::tcl::encoding::convertfrom -stoponerror 1 utf-8 Ã\x84Ã }}
         -errorcode {TCL ENCODING STOPONERROR 2}
-        -errorinfo {unexpected byte at index 2: 'Ã' (\xC3)
+        -errorinfo {conversion error at index 2
             while executing
-            "encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1] -stoponerror"} -errorline 1
+            "encoding convertfrom -stoponerror 1 utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]"} -errorline 1
 
 Remark "\0x84" was replaced for the control character "IND" for visibility in the stack trace
 
@@ -146,6 +146,31 @@ This design allows to catch this error and get the error position by the followi
         set errorIndex [lindex [dict get $errorDict -errorcode] 3]
         ...
     }
+
+# Rejected alternatives
+
+## Report the error character
+
+The original implementation reported the failing character in the error message.
+This may be a control character corrupting a terminal view.
+IMHO error messages should be in the printable ASCII character set.
+Thus, this reporting was removed.
+
+The error character was also reported as hexadecimal byte.
+This is IMHO of limited use.
+In addition, only the byte was expressed.
+But the error may be a multi-byte sequence like an invalid utf-8 sequence.
+So, this is not always exact.
+
+## Option at the end
+
+For me, the option position at the end of the command looks difficult.
+One may have a large expression as data and this option may just not be visible.
+An example is as follows:
+
+    % catch {encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1] -stoponerror 1} e d
+
+IMHO options should be specified before the data.
 
 # Implementation
 
