TIP601 encoding stoponerror: add reference to TCL ticket 535705

--- a/tip/601.md
+++ b/tip/601.md
@@ -127,6 +127,11 @@ The error code is composed of the following 4 list elements:
 
 # Discussion
 
+## Ticket 535705
+
+This TIP started in the [TCL ticket 535705](https://core.tcl-lang.org/tcl/info/535705ffffffffff).
+Please refer to this ticket for information about the initial discussion.
+
 ## Option design
 
 The requirement to use a boolean instead a flag is due to the fact, that it was proposed to change the default value from `FALSE` to `TRUE` with **TCL9**.
