--- a/tip/601.md
+++ b/tip/601.md
@@ -57,16 +57,16 @@ It would be great to know, where the error is to stop the sequence.
 
 Here is a code snipped with the current implementation:
 
-    % catch {encoding convertfrom utf-8 -stoponerror 1 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]} e d
+    % catch {encoding convertfrom utf-8 -stoponerror [string range [encoding convertto utf-8 ÄÖ] 0 end-1]} e d
     1
     % set d
         -code 1\
         -level 0
-        -errorstack {INNER {invokeStk1 ::tcl::encoding::convertfrom -stoponerror 1 utf-8 Ã\x84Ã }}
+        -errorstack {INNER {invokeStk1 ::tcl::encoding::convertfrom -stoponerror utf-8 Ã\x84Ã }}
         -errorcode {TCL ENCODING STOPONERROR 2}
         -errorinfo {conversion error at index 2
             while executing
-            "encoding convertfrom -stoponerror 1 utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]"} -errorline 1
+            "encoding convertfrom -stoponerror utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]"} -errorline 1
 
 Remark "\0x84" was replaced for the control character "IND" for visibility in the stack trace
 
@@ -88,23 +88,23 @@ This causes issues in a multi-platform applications, as the error is not detecte
 # Specification
 
 ## New Option
-The `encoding` ensamble will be extended by a new option `-stoponerror`:
+The `encoding` ensamble will be extended by a new options `-stoponerror` `-nothrow`:
 
-    encoding convertfrom ?-stoponerror bool? ?encoding? data
-    encoding convertto ?-stoponerror bool? ?encoding? data
+    encoding convertfrom ?-stoponerror|-nothrow? ?encoding? data
+    encoding convertto ?-stoponerror|-nothrow? ?encoding? data
 
-The specified boolean has the following functionality:
+The specified options have the following functionality:
 
-| Value   | Description |
+| Options   | Description |
 |:-------:|:----------------:|
-| `FALSE` | Any conversion data error is handled by replacement by **?** of the concerned byte |
-| `TRUE`  | The conversion stops with an error on any conversion data error |
+| `-nothrow` | Any conversion data error is handled by replacement by **?** of the concerned byte |
+| `-stoponerror`  | The conversion stops with an error on any conversion data error |
 
-The default value is `FALSE` for TCL 8.x and `TRUE` for TCL 9.x.
+The default value is `-nothrow` for TCL 8.x and `-stoponerror` for TCL 9.x.
 
 ## Error reporting
 
-If `-stoponerror` is `TRUE`, the following error reporting takes place in case of an conversion error.
+If `-stoponerror` is used (by default in TCL 9.0), the following error reporting takes place in case of an conversion error.
 
 ### Definition of "error position"
 The position of the error in the source string is indicated in the error reporting.
@@ -112,8 +112,8 @@ In case of multi-byte source data, this position is always one byte after the la
 
 ###Error Message
 
-The error message is: "conversion error at index *error position*"
-
+The error message is: "unexpected byte at index *error position* '*byte value*'", for `encoding convertfrom`
+or "unexpected character at index *error position* '*character value*'", for `encoding convertto`
 where *error position* is a number containing the source string error position as defined above.
 
 ### Error Code
@@ -123,7 +123,7 @@ The error code is composed of the following 4 list elements:
 1.  Fix word: `TCL`
 2.  Fix word: `ENCODING`
 3.  Fix word: `STOPONERROR`
-4.  Value *error position*: The index in the source string of the error position.
+4.  Value *error position*: The index in the source string (usually a byte array, in case of `encoding convertfrom`) of the error position.
 
 # Discussion
 
@@ -131,12 +131,6 @@ The error code is composed of the following 4 list elements:
 
 This TIP started in the [TCL ticket 535705](https://core.tcl-lang.org/tcl/info/535705ffffffffff).
 Please refer to this ticket for information about the initial discussion.
-
-## Option design
-
-The requirement to use a boolean instead a flag is due to the fact, that it was proposed to change the default value from `FALSE` to `TRUE` with **TCL9**.
-Otherwise, it is not possible to write code for **TCL8** and **TCL9**.
-The boolean is not required if this default change is not seen as a possibility (it may be a vote option).
 
 ## Error reporting design
 
@@ -156,16 +150,10 @@ This design allows to catch this error and get the error position by the followi
 
 ## Report the error character
 
-The original implementation reported the failing character in the error message.
+The original implementation reported the failing character/byte in the error message.
 This may be a control character corrupting a terminal view.
 IMHO error messages should be in the printable ASCII character set.
-Thus, this reporting was removed.
-
-The error character was also reported as hexadecimal byte.
-This is IMHO of limited use.
-In addition, only the byte was expressed.
-But the error may be a multi-byte sequence like an invalid utf-8 sequence.
-So, this is not always exact.
+Therefore this was removed, the character/byte is now only reported in hexadecimal notation.
 
 ## Option at the end
 
@@ -173,9 +161,14 @@ For me, the option position at the end of the command looks difficult.
 One may have a large expression as data and this option may just not be visible.
 An example is as follows:
 
-    % catch {encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1] -stoponerror 1} e d
+    % catch {encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1] -stoponerror} e d
 
 IMHO options should be specified before the data.
+
+## --stoponerror as boolean option
+
+An alternative would be to use `-stoponerror 1` in stead of `-stoponerror` and `-stoponerror 0` in stead of `-nothrow`.
+This only makes the command longer, without much benefit.
 
 # Implementation
 
