--- a/tip/601.md
+++ b/tip/601.md
@@ -9,6 +9,7 @@
 # Abstract
 
 An additional option is proposed for `encoding convertto/convertfrom` to stop on the first encoding issue.
+In addition, this change is proposed as default vaue for TCL9.x series.
 
 # Rationale
 
@@ -88,23 +89,22 @@ This causes issues in a multi-platform applications, as the error is not detecte
 # Specification
 
 ## New Option
-The `encoding` ensamble will be extended by a new option `-stoponerror`:
+The `encoding` ensamble will be extended by two new options `-stoponerror` and `-nothrow`:
 
-    encoding convertfrom ?-stoponerror bool? ?encoding? data
-    encoding convertto ?-stoponerror bool? ?encoding? data
+    encoding convertfrom ?-stoponerror|-nothrow? ?encoding? data
+    encoding convertto ?-stoponerror|-nothrow? ?encoding? data
 
-The specified boolean has the following functionality:
+The options have the following functionality:
 
-| Value   | Description |
-|:-------:|:----------------:|
-| `FALSE` | Any conversion data error is handled by replacement by **?** of the concerned byte |
-| `TRUE`  | The conversion stops with an error on any conversion data error |
-
-The default value is `FALSE` for TCL 8.x and `TRUE` for TCL 9.x.
+| Value           | Description |
+|:---------------:|:----------------:|
+| `-nothrow`      | Any conversion data error is handled by replacement by **?** of the concerned byte |
+| `-stoponerror`  | The conversion stops with an error on any conversion data error |
+The default value is `-nothrow` for TCL 8.x and `-stoponerror` for TCL 9.x.
 
 ## Error reporting
 
-If `-stoponerror` is `TRUE`, the following error reporting takes place in case of an conversion error.
+If `-stoponerror` is active, the following error reporting takes place in case of an conversion error.
 
 ### Definition of "error position"
 The position of the error in the source string is indicated in the error reporting.
@@ -134,9 +134,9 @@ Please refer to this ticket for information about the initial discussion.
 
 ## Option design
 
-The requirement to use a boolean instead a flag is due to the fact, that it was proposed to change the default value from `FALSE` to `TRUE` with **TCL9**.
+The requirement to have two ortogonal flags is due to the fact, that it was proposed to change the default value from `-nothrow` to `-stoponerror` with **TCL9**.
 Otherwise, it is not possible to write code for **TCL8** and **TCL9**.
-The boolean is not required if this default change is not seen as a possibility (it may be a vote option).
+The ortogonal option `-nothrow`is not required if this default change is not seen as a possibility (it may be a vote option).
 
 ## Error reporting design
 
@@ -167,23 +167,18 @@ In addition, only the byte was expressed.
 But the error may be a multi-byte sequence like an invalid utf-8 sequence.
 So, this is not always exact.
 
-## Option at the end
-
-For me, the option position at the end of the command looks difficult.
-One may have a large expression as data and this option may just not be visible.
-An example is as follows:
-
-    % catch {encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1] -stoponerror 1} e d
-
-IMHO options should be specified before the data.
-
 # Implementation
 
 Implementation is in Tcl branch `encodings-with-flags`
 
 # Compatibility
 
-Compatible
+The implementation is fully backward compatible for 8.7.
+There is a compatibility break for TCL 9.0.
+
+# Credits
+
+Thanks to Jan Nijtmans for idea and implementation.
 
 # Copyright
 
