TIP601 encoding stoponerror: error position value example and specification refinement

--- a/tip/601.md
+++ b/tip/601.md
@@ -65,13 +65,16 @@ Here is a code snipped with the current implementation:
         -level 0
         -errorstack {INNER {invokeStk1 ::tcl::encoding::convertfrom -stoponerror utf-8 Ã\x84Ã }}
         -errorcode {TCL ENCODING STOPONERROR 2}
-        -errorinfo {conversion error at index 2
+        -errorinfo {unexpected byte at index 2 '\xc3' 2
             while executing
             "encoding convertfrom -stoponerror utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]"} -errorline 1
 
-Remark "\0x84" was replaced for the control character "IND" for visibility in the stack trace
+Note: "\\0x84" was replaced for the control character "IND" for visibility in the stack trace
 
-With this info, the `-errorcode` may be catched by a `try` clause and the error byte location (2) may be catched.
+Note: "c3" is the hexadecimal representation for decimal 195.
+Thus, "\\xc3" is the first byte of the utf-8 representation of "Ö".
+
+With this info, the `-errorcode` may be catched by a `try` clause and the error byte location (2) may be catched (see discussion section for an example).
 The data before may by passed again to `encoding convertfrom` which is the correct received data.
 
 Note: it would be efficient, if the already converted string may be returned also.
@@ -116,6 +119,8 @@ In case of multi-byte source data, this position is always one byte after the la
 The error message is: "unexpected byte at index *error position* '*byte value*'", for `encoding convertfrom`
 or "unexpected character at index *error position* '*character value*'", for `encoding convertto`
 where *error position* is a number containing the source string error position as defined above.
+
+*character value* is the exadecimal representation of the byte in the source string where *error position* points to.
 
 ### Error Code
 
