Make TIP 601 match implementation better. Remove credits in TIP #602 (thanks! but I didn't do anything here .....)

--- a/tip/601.md
+++ b/tip/601.md
@@ -58,14 +58,14 @@ It would be great to know, where the error is to stop the sequence.
 
 Here is a code snipped with the current implementation:
 
-    % catch {encoding convertfrom utf-8 -stoponerror [string range [encoding convertto utf-8 ÄÖ] 0 end-1]} e d
+    % catch {encoding convertfrom -stoponerror utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]} e d
     1
     % set d
         -code 1\
         -level 0
         -errorstack {INNER {invokeStk1 ::tcl::encoding::convertfrom -stoponerror utf-8 Ã\x84Ã }}
         -errorcode {TCL ENCODING STOPONERROR 2}
-        -errorinfo {unexpected byte at index 2 '\xc3' 2
+        -errorinfo {{unexpected byte sequence starting at index 2: '\xC3
             while executing
             "encoding convertfrom -stoponerror utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]"} -errorline 1
 
@@ -92,16 +92,16 @@ This causes issues in a multi-platform applications, as the error is not detecte
 # Specification
 
 ## New Option
-The `encoding` ensamble will be extended by two new options `-stoponerror` and `-nothrow`:
+The `encoding` ensamble will be extended by two new options `-nothrow` and `-stoponerror`:
 
-    encoding convertfrom ?-stoponerror|-nothrow? ?encoding? data
-    encoding convertto ?-stoponerror|-nothrow? ?encoding? data
+    encoding convertfrom ?-nothrow|-stoponerror? ?encoding? data
+    encoding convertto ?-nothrow|-stoponerror|? ?encoding? data
 
 The specified options have the following functionality:
 
 | Options   | Description |
 |:-------:|:----------------:|
-| `-nothrow` | Any conversion data error is handled by replacement by **?** of the concerned byte |
+| `-nothrow` | Any conversion data error is handled by replacement (by **?** or **U+FFFD**) of the concerned byte |
 | `-stoponerror`  | The conversion stops with an error on any conversion data error |
 
 The default value is `-nothrow` for TCL 8.x and `-stoponerror` for TCL 9.x.
@@ -120,7 +120,7 @@ The error message is: "unexpected byte at index *error position* '*byte value*'"
 or "unexpected character at index *error position* '*character value*'", for `encoding convertto`
 where *error position* is a number containing the source string error position as defined above.
 
-*character value* is the exadecimal representation of the byte in the source string where *error position* points to.
+*character value* is the hexadecimal representation of the byte in the source string where *error position* points to.
 
 ### Error Code
 
