--- a/tip/601.md
+++ b/tip/601.md
@@ -65,7 +65,7 @@ Here is a code snipped with the current implementation:
         -level 0
         -errorstack {INNER {invokeStk1 ::tcl::encoding::convertfrom -stoponerror utf-8 Ã\x84Ã }}
         -errorcode {TCL ENCODING STOPONERROR 2}
-        -errorinfo {{unexpected byte sequence starting at index 2: '\xC3
+        -errorinfo {unexpected byte sequence starting at index 2: '\xC3'
             while executing
             "encoding convertfrom -stoponerror utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]"} -errorline 1
 
