TIP602: add comment by Don Porter

--- a/tip/602.md
+++ b/tip/602.md
@@ -56,6 +56,28 @@ And, the ~ breakage appears in the first run of an old script in a
 future v9 interpreter (file not found error) while the hidden latent 
 data dependent bug is just waiting to bite someday.
 
+### Comment by Don Porter
+
+This is a much deeper issue than either that draft TIP or the posts here
+have uncovered.  The VFS layer has a problem not only with paths
+beginning with '~', but with all paths that have a prefix that can be
+claimed by a mounted Tcl_Filesystem.  The same ./ prefixing has to be
+applied to workaround implications of this unfortunate design.  A related matter is that prefixes and patterns that determine [file system] assignments are not accomplished by a registration, but by a round-robin game of hot potato.  The design flaws are large and deep.  A good solution is a pretty major rewrite.  This isn't a quick fix.
+
+Sometimes I think a good partial solution would be a rewrite that
+replaced all the conditional branches that implement the ~ translation
+pervasively in the VFS implementation, with a different strategy that
+made ~ translation available only through a separately mounted
+Tcl_Filesystem that claimed the path names matching ~*.  In that
+revised strategy, more scripts and apps would have the option of
+unmounting that Tcl_Filesystem to disable the feature.
+
+Some history and additional information in ticket
+
+<https://core.tcl-lang.org/tcl/tktview/2511011>
+
+and probably other tickets I cannot find quickly now. 
+
 ## wiki
 
 Here is the wiki page dedicated to this issue:
