TIP 601: Bring error-messages in line with current implementation

--- a/tip/601.md
+++ b/tip/601.md
@@ -71,8 +71,8 @@ Here is a code snipped with the current implementation:
 
 Note: "\\0x84" was replaced for the control character "IND" for visibility in the stack trace
 
-Note: "c3" is the hexadecimal representation for decimal 195.
-Thus, "\\xc3" is the first byte of the utf-8 representation of "Ö".
+Note: "C3" is the hexadecimal representation for decimal 195.
+Thus, "\\xC3" is the first byte of the utf-8 representation of "Ö".
 
 With this info, the `-errorcode` may be catched by a `try` clause and the error byte location (2) may be catched (see discussion section for an example).
 The data before may by passed again to `encoding convertfrom` which is the correct received data.
@@ -92,7 +92,7 @@ This causes issues in a multi-platform applications, as the error is not detecte
 # Specification
 
 ## New Option
-The `encoding` ensamble will be extended by two new options `-nothrow` and `-stoponerror`:
+The `encoding` ensemble will be extended by two new options `-nothrow` and `-stoponerror`:
 
     encoding convertfrom ?-nothrow|-stoponerror? ?encoding? data
     encoding convertto ?-nothrow|-stoponerror|? ?encoding? data
@@ -116,11 +116,11 @@ In case of multi-byte source data, this position is always one byte after the la
 
 ###Error Message
 
-The error message is: "unexpected byte at index *error position* '*byte value*'", for `encoding convertfrom`
-or "unexpected character at index *error position* '*character value*'", for `encoding convertto`
+The error message is: "unexpected byte sequence starting at index *error position*: '*byte value*'", for `encoding convertfrom`
+or "unexpected character at index *error position*: '*character value*'", for `encoding convertto`
 where *error position* is a number containing the source string error position as defined above.
 
-*character value* is the hexadecimal representation of the byte in the source string where *error position* points to.
+*byte value*/*character value* is the hexadecimal representation of the byte in the source string where *error position* points to.
 
 ### Error Code
 
