Document new C API and additional flags for TIP #601

--- a/tip/601.md
+++ b/tip/601.md
@@ -131,6 +131,25 @@ The error code is composed of the following 4 list elements:
 3.  Fix word: `STOPONERROR`
 4.  Value *error position*: The index in the source string (usually a byte array, in case of `encoding convertfrom`) of the error position.
 
+## New C API
+
+Introduce 2 new functions:
+
+* `size_t Tcl_ExternalToUtfDStringEx(Tcl_Encoding encoding, const char *src, int srcLen, int flags, Tcl_DString *dsPtr)`
+* `size_t Tcl_UtfToExternalDStringEx(Tcl_Encoding encoding, const char *src, int srcLen, int flags, Tcl_DString *dsPtr)`
+
+These functions behave the same as `Tcl_ExternalToUtfDString/Tcl_UtfToExternalDString`, only they have
+an additional `flags` parameter accepting the following additional values (can be used in combination):
+
+* TCL_ENCODING_STOPONERROR (don't replace invalid characters/bytes but throw an exception on errors. Default in Tcl 9.0)
+* TCL_ENCODING_NO_THROW  (don't throw an exception on errors, but replace invalid characters/bytes. Default in Tcl 8.7)
+* TCL_ENCODING_MODIFIED  (convert NULL bytes to \\xC0\\x80 in stead of 0x00. Only valid for "utf-8" and "cesu-8")
+
+The TCL_ENCODING_MODIFIED flag can be used in extensions for generating "modified" encodings, such as java
+(which uses "modified" cesu-8 internally). This flag is not exposed at script level, unlike `-stoponerror`/`-nothrow`.
+
+The return value of these two functions is the error-position in case of an error, or `(size_t)-1` if everything is OK.
+
 # Discussion
 
 ## Ticket 535705
