TIP601: change alternate branch name

--- a/tip/601.md
+++ b/tip/601.md
@@ -220,7 +220,7 @@ The distinct behaviour is as follows:
 This specification is inspired by the already present option **-failindex** of the **string is** command.
 
 Jan mentioned, that the implementation is not trivial, as the encoding ensemble is a partially compiled command.
-Nevertheless, an implementation is tried in the branch `tip601-failindex`.
+Nevertheless, an implementation is tried in the branch `tip601-encoding-failindex`.
 
 Note: there was a side discussion within the thread if an incomplete multi-byte sequence is an error or not.
 Unfortunately, the required detail about the reporting method of an incomplete multi-byte sequence was not solved.
