TIP601 encoding stoponerror: detail description of the C API flags

--- a/tip/601.md
+++ b/tip/601.md
@@ -141,14 +141,14 @@ Introduce 2 new functions:
 These functions behave the same as `Tcl_ExternalToUtfDString/Tcl_UtfToExternalDString`, only they have
 an additional `flags` parameter accepting the following additional values (can be used in combination):
 
-* TCL_ENCODING_STOPONERROR (don't replace invalid characters/bytes but throw an exception on errors. Default in Tcl 9.0)
-* TCL_ENCODING_NO_THROW  (don't throw an exception on errors, but replace invalid characters/bytes. Default in Tcl 8.7)
-* TCL_ENCODING_MODIFIED  (convert NULL bytes to \\xC0\\x80 in stead of 0x00. Only valid for "utf-8" and "cesu-8")
+* TCL_ENCODING_STOPONERROR: don't replace invalid characters/bytes but return the first error position. Default in Tcl 9.0.
+* TCL_ENCODING_NO_THROW: replace invalid characters/bytes by a default fallback character. Always return -1. Default in Tcl 8.7.
+* TCL_ENCODING_MODIFIED: convert NULL bytes to \\xC0\\x80 in stead of 0x00. Only valid for "utf-8" and "cesu-8". This flag may be used together with the other flags.
 
 The TCL_ENCODING_MODIFIED flag can be used in extensions for generating "modified" encodings, such as java
 (which uses "modified" cesu-8 internally). This flag is not exposed at script level, unlike `-stoponerror`/`-nothrow`.
 
-The return value of these two functions is the error-position in case of an error, or `(size_t)-1` if everything is OK.
+The return value of these two functions is the error-position in case of an error reporting, or `(size_t)-1` if everything is OK.
 
 # Discussion
 
