--- a/tip/193.md
+++ b/tip/193.md
@@ -89,29 +89,30 @@ question marks.
 Otherwise, the second argument to **info help** will be one of:
 
 **summary**: No further arguments. Returns a brief description of what the
-   command does, such as the summary text from the manual page (e.g.,
-   "Increment the value of a variable" for **incr**).
+    command does, such as the summary text from the manual page (e.g.,
+    "Increment the value of a variable" for **incr**).
 
 **get**: Two optional arguments; an index into the list of help "lines"
-   \(first\) and an index within the line \(second\).  If one index is
-   supplied, returns the list of values \(without lit/var or opt/req info\)
-   for the indexed line.  If two indexes are supplied, returns the string form
-   for the indexed word within the indexed line.  If no indexes are supplied,
-   or returns a list of every such value list when no index is supplied.
+    \(first\) and an index within the line \(second\).  If one index is
+    supplied, returns the list of values \(without lit/var or opt/req info\)
+    for the indexed line.  If two indexes are supplied, returns the string
+    form for the indexed word within the indexed line.  If no indexes are
+    supplied, or returns a list of every such value list when no index is
+    supplied.
 
-   **info help** _cmd_ **get** ?_lineIndex_? ?_wordIndex_?
+    **info help** _cmd_ **get** ?_lineIndex_? ?_wordIndex_?
 
 **literal**: Two required arguments; an index into the list of help "lines"
-   and an index into the list of values for that line.  Returns a boolean that
-   is true when the indexed word within the indexed line is a literal.
+    and an index into the list of values for that line.  Returns a boolean
+    that is true when the indexed word within the indexed line is a literal.
 
-   **info help** _cmd_ **literal** _lineIndex wordIndex_
+    **info help** _cmd_ **literal** _lineIndex wordIndex_
 
 **required**: Two required arguments; an index into the list of help "lines"
-   and an index into the list of values for that line.  Returns a boolean that
-   is true when the indexed word within the indexed line is required.
+    and an index into the list of values for that line.  Returns a boolean
+    that is true when the indexed word within the indexed line is required.
 
-   **info required** _cmd_ **literal** _lineIndex wordIndex_
+    **info required** _cmd_ **literal** _lineIndex wordIndex_
 
 [ToDo: could **info help** be used as a mechanism for procedures to set their
 own help up?]
@@ -119,4 +120,3 @@ own help up?]
 # Copyright
 
 This document has been placed in the public domain.
-
